-rotate on line without aditional transformations works OK